--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,15 @@
 			<version>1.18.16</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- Exception Utils -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
